观察者模式

--- a/pom.xml
+++ b/pom.xml
@@ -30,10 +30,18 @@
         <java.version>17</java.version>
     </properties>
     <dependencies>
+
+        <!-- web 依赖 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+
+        <!-- 这个一俩似乎可以注释，有了 web 依赖 -->
+        <!--<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>-->
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
