spring boot with web

--- a/pom.xml
+++ b/pom.xml
@@ -30,11 +30,14 @@
         <java.version>17</java.version>
     </properties>
     <dependencies>
+
+        <!-- web 依赖 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
+        <!-- 测试依赖 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
