transaction with h2 database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
 spring.application.name=demo
+
+
+
+# # \u4F7F\u7528H2\u5185\u5B58\u6570\u636E\u5E93
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# \u542F\u52A8h2\u63A7\u5236\u53F0
+spring.h2.console.enabled=true
+# \u914D\u7F6EH2\u63A7\u5236\u53F0\u8DEF\u5F84
+spring.h2.console.path=/h2-console
+
+
+
+
+
+
