--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,19 @@
     </properties>
     <dependencies>
 
+        <!-- JPA 依赖 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+
+        <!-- h2 数据库依赖 -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+
         <!-- web 依赖 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
